--- a/index.html
+++ b/index.html
@@ -11,14 +11,32 @@
   <body>
     <div id="container">
       <div class="row">
-        <div class="column-6"> A </div>
+        <div class="column-12"> A </div>
       </div>
 
       <div class="row">
-        <div class="column-8"> B </div>
-        <div class="column-4"> C </div>
+        <div class="column-8" id="special-box">
+
+          <div class="row">
+            <div class="column-12" id="row-b"> B </div>
+          </div>
+
+          <div class="row">
+            <div class="column-4"> C </div>
+            <div class="column-4"> D </div>
+            <div class="column-4"> E </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div id="alto" class="column-4 column-4-mobile"> F </div>
+        </div>
       </div>
-    </div>
+
+   </div>
+
+
+
 
 
     <script type="text/javascript" src="js/app.js"></script>
